--- a/Golang_App/.env
+++ b/Golang_App/.env
@@ -1,3 +1,3 @@
 GIN_PORT = :8080
-MONGO_DB_URL = "mongodb+srv://deveshvishnoi41:zDP5VavlGc8LBpff@cluster0.gytx6.mongodb.net/"
+MONGO_DB_URL = "mongodb+srv://deveshvishnoi41:zDP5VavlGc8LBpff@cluster0.gytx6.mongodb.net/Realtime_chat?retryWrites=true&w=majority&tls=true&serverSelectionTimeoutMS=5000"
 USER_COLLECTION_NAME  = "user"
